<resources>
    <string name="app_name">Meu Contato</string>
    <string name="google_maps_key">AIzaSyC0ffbXn1PR63WgPBN16gWJ4B8Q7CUBTU0</string>

    <!--Common-->
    <string name="save">Salvar</string>
    <string name="delete">Excluir</string>
    <string name="description">Descrição</string>
    <string name="close">Fechar</string>

    <!--Labels Activities-->
    <string name="activity_info_label">Informações</string>
    <string name="activity_edit_profile_label">Edição do perfil</string>
    <string name="activity_contact_info_label">Detalhes do Contato</string>

    <!--Login-->
    <string name="login_google_button">Sign In with Google</string>
    <string name="login_error">Falha ao fazer login</string>

    <!--Navigation-->
    <string name="navigation_menu_contact_list">Contatos</string>
    <string name="navigation_menu_meetups">Meetups</string>
    <string name="navigation_menu_share">Compartilhar</string>
    <string name="navigation_menu_info">Informações</string>
    <string name="navigation_menu_profiles">Perfis</string>

    <!--Filter City-->
    <string name="filter_city_query_hint">Buscar cidade</string>

    <!--Meetup Detail-->
    <string name="meetup_detail_confirmation">%s confirmações</string>
    <string name="meetup_detail_show_more">Ver mais</string>
    <string name="meetup_detail_show_less">Ver menos</string>
    <string name="meetup_detail_more_info">Mais informaçoes</string>

    <!--Share-->
    <string name="share_title">Compartilhar Contato</string>
    <string name="share_send_contact">Compartilhar</string>
    <string name="share_read_contact">Ler contato</string>

    <!--Info Detail-->
    <string name="info_detail_tag">Tag</string>
    <string name="info_detail_contact">Contato</string>

    <!--Profile Detail-->
    <string name="profile_detail_name">Nome do Perfil</string>
    <string name="profile_detail_display_name">Nome de exibição</string>
    <string name="profile_detail_saved">Perfil salvo com sucesso</string>
</resources>
