<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewModel" type="rodolfoizidoro.meucontato.viewmodel.ProfileDetailViewModel"/>
    </data>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".view.activity.ProfileDetailActivity">

        <include
                layout="@layout/primary_toolbar"/>

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:id="@+id/ilProfileName"
                        android:layout_width="match_parent"
                        android:layout_marginTop="16dp"
                        android:hint="@string/profile_detail_name"
                        android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ietProfileName"
                            android:layout_width="match_parent"
                            android:inputType="text"
                            android:text="@={viewModel.loadSucess().name}"
                            android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:id="@+id/ilProfileDisplayName"
                        android:layout_width="match_parent"
                        android:layout_marginTop="16dp"
                        android:hint="@string/profile_detail_display_name"
                        android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ietProfilDisplayName"
                            android:layout_width="match_parent"
                            android:text="@={viewModel.loadSucess().displayName}"
                            android:inputType="text"
                            android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:id="@+id/ilProfileDescription"
                        android:layout_width="match_parent"
                        android:layout_marginTop="16dp"
                        android:hint="@string/description"
                        android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ietProfileDescription"
                            android:layout_width="match_parent"
                            android:text="@={viewModel.loadSucess().description}"
                            android:inputType="text"
                            android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.recyclerview.widget.RecyclerView
                        android:layout_marginTop="16dp"
                        android:id="@+id/rvProfileContacts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_marginTop="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnProfileDelete"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:text="@string/delete"
                            android:enabled="false"
                            android:layout_height="48dp"
                            android:layout_weight="1"
                            android:layout_marginEnd="8dp"
                            android:layout_width="0dp"/>
                    <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnProfileSave"
                            style="@style/Widget.MaterialComponents.Button"
                            android:text="@string/save"
                            android:layout_height="48dp"
                            android:layout_marginStart="8dp"
                            android:layout_weight="1"
                            android:layout_width="0dp"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>
