<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:id="@+id/rootShare"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.fragments.ShareFragment">


    <TextView
            android:id="@+id/tvTitleShare"
            android:text="@string/share_title"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/darkGray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:elevation="8dp"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="wrap_content">

            <com.jaredrummler.materialspinner.MaterialSpinner
                    android:enabled="false"
                    app:ms_arrow_tint="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_marginTop="16dp"
                    android:text="@string/share_send_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            <ImageView
                    android:id="@+id/ivShareSendQr"
                    android:src="@drawable/ic_share_send_qr_code"
                    android:padding="8dp"
                    android:layout_width="60dp"
                    android:layout_height="60dp"/>

            <TextView
                    android:text="@string/share_read_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"/>

            <ImageView
                    android:id="@+id/ivShareReceiveQr"
                    android:src="@drawable/ic_share_receive_qr_code"
                    android:layout_width="60dp"
                    android:layout_marginBottom="8dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="8dp"/>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnShareTestContact"
                    android:layout_margin="16dp"
                    android:text="Adicionar meu contato - Teste"
                    style="@style/ButtonPrimary"/>


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
